<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pub_sub</name>
  <version>1.0.0</version>
  <description>
    Basic example of publisher and subscriber in one node.
    As seen at https://www.roboticscontentlab.com/blog/publish-and-subscribe-mechanism-with-ros-2-rclpy/, on September 29, 2024
  </description>
  <maintainer email="office@roboticscontentlab.com">Robotics Content Lab</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
